--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -222,7 +222,7 @@
     </servlet-mapping>
 
 
-    <!--<error-page>
+    <error-page>
         <error-code>500</error-code>
         <location>/error.jsp</location>
     </error-page>
@@ -233,5 +233,5 @@
     <error-page>
         <error-code>403</error-code>
         <location>/error.jsp</location>
-    </error-page>-->
+    </error-page>
 </web-app>
